add eclipse and idea hot deploy note