@@ -1,9 +1,7 @@
 package com.post.common.util;
 
-import java.io.BufferedInputStream;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.util.Arrays;
 
 import com.post.common.constant.GlobalConstant;
 
@@ -21,7 +19,7 @@ public final class BashUtil {
 	/**
 	 * 执行shell命令
 	 * 
-	 * @param sh
+	 * @param shell
 	 * 
 	 * @return
 	 * @author Barkley.Chang
@@ -32,76 +30,59 @@ public final class BashUtil {
 			return "";
 		}
 
-		String result = "";
+		StringBuilder result = new StringBuilder();
+		Process process = null;
+		BufferedReader buffIn = null;
+		BufferedReader buffError = null;
 
 		try {
-			String[] sh = new String[] { "/bin/sh", "-c", shell };
-			// Execute Shell Command
-			System.out.println("sh:" + Arrays.toString(sh));
-			ProcessBuilder pb = new ProcessBuilder(sh);
-			Process p = pb.start();
-			result = getShellOut(p);
-			System.out.println("result:\"" + result + "\"");
-		} catch (Exception e) {
-			e.printStackTrace();
-		}
+			// 执行命令, 返回一个子进程对象（命令在子进程中执行）
+			process = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c", shell }, null, null);
+			// 获取命令执行结果, 有两个结果: 正常的输出 和 错误的输出（PS: 子进程的输出就是主进程的输入）
+			buffIn = new BufferedReader(new InputStreamReader(process.getInputStream(), GlobalConstant.UTF8));
+			buffError = new BufferedReader(new InputStreamReader(process.getErrorStream(), GlobalConstant.UTF8));
+			// 方法阻塞, 等待命令执行完成（成功会返回0）
+			process.waitFor();
 
-		return result;
-	}
+			// 读取输出
+			String line = null;
 
-	/**
-	 * 读取输出流数据
-	 * 
-	 * @param p
-	 *            进程
-	 * @return 从输出流中读取的结果
-	 * @author Barkley.Chang
-	 * @date 2020-03-10 08:58
-	 */
-	private static final String getShellOut(Process p) {
-		if (p == null) {
-			return "";
-		}
+			while ((line = buffIn.readLine()) != null) {
+				result.append(line).append(System.lineSeparator());
+			}
 
-		StringBuilder sb = new StringBuilder();
-		BufferedInputStream in = null;
-		BufferedReader br = null;
-
-		try {
-			in = new BufferedInputStream(p.getInputStream());
-			br = new BufferedReader(new InputStreamReader(in, GlobalConstant.UTF8));
-			String s;
-			int index = 0;
-
-			while ((s = br.readLine()) != null) {
-				if (index > 0) {
-					// 追加换行符
-					sb.append(System.lineSeparator());
-				}
-
-				sb.append(s);
-				index++;
+			while ((line = buffError.readLine()) != null) {
+				result.append(line).append(System.lineSeparator());
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
 		} finally {
-			if (br != null) {
+			if (buffIn != null) {
 				try {
-					br.close();
+					buffIn.close();
 				} catch (Exception e) {
 					e.printStackTrace();
 				}
 			}
 
-			if (in != null) {
+			if (buffError != null) {
 				try {
-					in.close();
+					buffError.close();
+				} catch (Exception e) {
+					e.printStackTrace();
+				}
+			}
+
+			// 销毁子进程
+			if (process != null) {
+				try {
+					process.destroy();
 				} catch (Exception e) {
 					e.printStackTrace();
 				}
 			}
 		}
 
-		return sb.toString();
+		return result.toString().trim();
 	}
 }
